--- a/angular.json
+++ b/angular.json
@@ -24,9 +24,13 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/datatables/media/css/jquery.dataTables.min.css"
+              "node_modules/datatables/media/css/jquery.dataTables.min.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": ["node_modules/datatables/media/js/jquery.dataTables.min.js"]
+            "scripts": ["node_modules/datatables/media/js/jquery.dataTables.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
+              "node_modules/jquery/dist/jquery.min.js"
+            ]
           },
           "configurations": {
             "production": {
