--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "datatables.net-buttons-dt": "^1.5.4",
     "datatables.net-dt": "^1.10.19",
     "jquery": "^3.3.1",
+    "popper": "^1.0.1",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
